src/core-crm/objects/Associated_Products__c/Associated_Products__c.object-meta.xml
<CustomObject>
    <label>Associated Products</label>
    <nameField>
        <displayFormat>AP - {000000}</displayFormat>
        <label>Associated Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>