src/core-crm/objects/Associated_Products__c/fields/Buyer_Group__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Group</label>
    <referenceTo>BuyerGroup</referenceTo>
    <relationshipLabel>Associated Products</relationshipLabel>
    <relationshipName>Associated_Products</relationshipName>
    <type>Lookup</type>
</CustomField>