src/core-crm/objects/Associated_Products__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determine if the Associated Product is active or not.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>